# dungeon-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HowToBuild.md  README.md  main.cpp  make.sh
Core/: Application.cpp  Application.h  Backend.h  Clock.h  Color.h  DebugTools.h  Entity.cpp  Entity.h  GUID.cpp  GUID.h  GameState.cpp  GameState.h  GenericResource.cpp  GenericResource.h  Global.h  Keys.h  Material.cpp  Material.h  Memory.h  Object.h  RawPtr.h  Renderer.cpp  Renderer.h  RenderingBackend.cpp  RenderingBackend.h  SFMLRenderingBackend.cpp  SFMLRenderingBackend.h  Serializable.h  State.cpp  State.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Core/ECS/: Component.h  Entity.cpp  Entity.h  SpriteRenderComponent.cpp  SpriteRenderComponent.h  Transform.cpp  Transform.h
Core/GL/: GLBackend.cpp  GLBackend.h  GLMaterial.cpp  GLMaterial.cpp.autosave  GLMaterial.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
Core/IO/: File.cpp  File.h  Path.cpp  Path.h  Serializable.h
Core/Rendering/: Color.h  Material.cpp  Material.h  Polygon.h  Primitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.h  Texture.cpp  Texture.h  Triangle.h
Core/sfml/: SFMLBackend.cpp  SFMLBackend.h  SFMLBufferInterval.h  SFMLMaterial.cpp  SFMLMaterial.h  SFMLRenderingBackend.cpp  SFMLRenderingBackend.h  SFMLTexture.cpp  SFMLTexture.h
res/shaders/: simple.fragment  simple.vertex
res/textures/: ground.dds
tests/: all_tests.cpp
